upgrade_downgrade/templates/multicluster/fortio-hello-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - helloworld.test.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-srv
spec:
  hosts:
    - helloworld.test.svc.cluster.local
  gateways:
    - hello-gateway
  http:
  - route:
    - destination:
        host: helloworld.test.svc.cluster.local
        port:
          number: 5000
---
